--- a/services/website/index_template.html
+++ b/services/website/index_template.html
@@ -13,8 +13,11 @@
       <input type="hidden" name="DB" value="medusa" />
     </form>
 
+    <h3><a href="viroblast/viroblast.php">Viroblast sequence search</a></h3>
+    <p>Search in FASTA-formatted sequence data across all data sets</p>
+
     <h3><a href="data">Browse data</a></h3>
-    Take a peek in the data directory.
+    <p>Take a peek in the data directory.</p>
 
   </body>
 </html>
