Add link to species page for website
Ignore-this: fc874c070ba3619f2d6bbec6a1f282f7

darcs-hash:9b7af6375185183f4079691565cf09de0a9ddc2c

--- a/services/website/index_template.html
+++ b/services/website/index_template.html
@@ -17,7 +17,8 @@
     <p>Search in FASTA-formatted sequence data across all data sets</p>
 
     <h3><a href="data">Browse data</a></h3>
-    <p>Take a peek in the data directory.</p>
+    <p>Take a peek in the <a href="data">data directory</a>, or check
+    out all the <a href="TSN">species</a> referenced.</p>
 
   </body>
 </html>
